# ChangeLog for www-plugins/noscript
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*noscript-2.6.9.31 (17 Jul 2015)

  17 Jul 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.27 (26 Jun 2015)

  26 Jun 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.26 (07 Jun 2015)

  07 Jun 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.24 (24 May 2015)

  24 May 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.22 (22 Apr 2015)

  22 Apr 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.21 (12 Apr 2015)

  12 Apr 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.20 (01 Apr 2015)

  01 Apr 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.19 (21 Mar 2015)

  21 Mar 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.18 (15 Mar 2015)

  15 Mar 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.17 (10 Mar 2015)

  10 Mar 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.15 (20 Feb 2015)

  20 Feb 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.13 (13 Feb 2015)

  13 Feb 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.12 (07 Feb 2015)

  07 Feb 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.11 (18 Jan 2015)

  18 Jan 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.10 (31 Dec 2014)

  31 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.8 (23 Dec 2014)

  23 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.9.7 (16 Dec 2014)
